Host all api for crud offer to swagger
